Material change not updating in the link of an override #83046

Closed
opened 2020-11-26 11:46:03 +01:00 by Simon Thommes · 7 comments
Member

System Information
Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-26 10:08, hash: 8a2270efc5
Worked: unknown
Short description of error
The material change of a linked in, overridden character is not updated as expected.

Screenshot animation file (character linked and overridden from character file):
image.png

Screenshot lighting file (linked from animation file):
image.png

I am not sure this is an actual bug, just a niche case that is not covered yet or even expected behaviour.
However, I was not able to reproduce this error with a simple test case. Rebuilding the file structure with a simple cube character showed no issue propagating material changes.
(For the sake of completeness, here the test case without the error: linked_overrides_material_propagation.zip)
Therefore it would be great if @mont29 could take a look at our production repository for Sprite Fright, where the error occurred.

The file structure:
Character file containing the character collection
Animation file containing the character animation on an overridden link of the character from the character file
Lighting file containing a link of a mother collection of the overridden character from the animation file

Paths in the Sprites SVN:
Character File: /pro/lib/char/rex/rex.blend
Animation File: /pro/animation_test/rex/performance/rex_dialogue_fortune/rex_dialogue_fortune.anim.blend
Lighting File: /pro/animation_test/rex/performance/rex_dialogue_fortune/rex_dialogue_fortune.lighting.blend

**System Information** Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-26 10:08, hash: `8a2270efc5` Worked: unknown **Short description of error** The material change of a linked in, overridden character is not updated as expected. Screenshot animation file (character linked and overridden from character file): ![image.png](https://archive.blender.org/developer/F9379834/image.png) Screenshot lighting file (linked from animation file): ![image.png](https://archive.blender.org/developer/F9379841/image.png) I am not sure this is an actual bug, just a niche case that is not covered yet or even expected behaviour. However, I was not able to reproduce this error with a simple test case. Rebuilding the file structure with a simple cube character showed no issue propagating material changes. (For the sake of completeness, here the test case **without** the error: [linked_overrides_material_propagation.zip](https://archive.blender.org/developer/F9379928/linked_overrides_material_propagation.zip)) Therefore it would be great if @mont29 could take a look at our production repository for Sprite Fright, where the error occurred. **The file structure:** Character file containing the character collection Animation file containing the character animation on an overridden link of the character from the character file Lighting file containing a link of a mother collection of the overridden character from the animation file **Paths in the Sprites SVN:** Character File: /pro/lib/char/rex/rex.blend Animation File: /pro/animation_test/rex/performance/rex_dialogue_fortune/rex_dialogue_fortune.anim.blend Lighting File: /pro/animation_test/rex/performance/rex_dialogue_fortune/rex_dialogue_fortune.lighting.blend
Author
Member

Added subscribers: @mont29, @SimonThommes

Added subscribers: @mont29, @SimonThommes
Bastien Montagne was assigned by Simon Thommes 2020-11-26 11:46:27 +01:00

Am not exactly sure what is expected to happen here tbh...

  • Opening .anim.blend it complains that a lot of materials are missing from rex.blend
    • But it has its 'own' materials suffixed with .rig.rig???
  • Opening .lighting.blend those .rig.rig materials have disappeared, and instead you get the broken links to missing materials from rex.blend

Further more, those new materials in rex.blend (the .rig.rig ones) are linked to the object, not the object data, so they are affected by overrides - and overrides of materials is... flacky at best currently.

if you re-assign the materials to geometry in rex.blend, then load anim.blend and save it (not even needed to resync the overrides), then open lighting.blend everything is 'fixed'

Am not exactly sure what is expected to happen here tbh... - Opening `.anim.blend` it complains that a lot of materials are missing from `rex.blend` - But it has its 'own' materials suffixed with `.rig.rig`??? - Opening `.lighting.blend` those `.rig.rig` materials have disappeared, and instead you get the broken links to missing materials from `rex.blend` Further more, those new materials in `rex.blend` (the `.rig.rig` ones) are linked to the object, not the object data, so they are affected by overrides - and overrides of materials is... flacky at best currently. if you re-assign the materials to geometry in `rex.blend`, then load `anim.blend` and save it (not even needed to resync the overrides), then open `lighting.blend` everything is 'fixed'

Note that resyncing in anim.blend and then reloading lighting.blend also fixes the issue for me (without touching to rex,blend at all this time).

Note that resyncing in `anim.blend` and then reloading `lighting.blend` also fixes the issue for me (without touching to `rex,blend` at all this time).

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

There is still something wrong here, since anim.blend does not overrides those materials at all, it should still be propagated to lighting.blend... still investigating

There is still something wrong here, since `anim.blend` does not overrides those materials at all, it should still be propagated to `lighting.blend`... still investigating

This issue was referenced by 87030d8be5

This issue was referenced by 87030d8be5e9dd6a9c6d95882949d1a18575b90c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83046
No description provided.